Fixed the alignment, cannot find proper font

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,8 @@
 .header  {
-  font-family: monospace;
+  font-family: 'Times New Roman', monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
 }
 
 .logo {
@@ -9,17 +11,30 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 8px 0;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0;
+}
+
+.left-links,
+.right-links{
+  display: flex;
+  align-items: center;
 }
 
 a {
   font-size: 22px;
+  color: blue;
   background: white;
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin: 8px;
 }
